--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     },
     "dependencies": {
         "axios": "^1.3.4",
+        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "concurrently": "^7.6.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "joi": "^17.8.3",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.1",
         "mongose": "^0.0.2-security"
     }
